components/layout/modal/modal.module.scss
@import '../../../styles/variables.scss';
@import '../../../styles/mixins.scss';

.modalWrapper {
  position: absolute;
  top:0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(0, 0, 0, .3);
  padding-top: 55px;

  @media screen and (min-width: 768px) {
    padding: 50px;
  }

  @media screen and (min-width: 992px) {
    padding: 100px;
  }
}

.modal {
  height: 100%;
  padding: 24px 0;
  background-color: $color-emtiness;
  border-top-right-radius: 15px;
  border-top-left-radius: 15px;
}

.modalBody {
  height: calc(100% - 24px);
  padding-top: 18px;
  overflow: auto;
  padding: 0 24px;
}

.modalHeader {
  @include drawGrid(2);
  font-size: 25px;
  padding: 0 24px 20px;
}

.closeButton {
  display: grid;
  grid-column-start: 2;
  justify-content: end;
}

